Closed
Bug 795707
Opened 13 years ago
Closed 13 years ago
Selecting multiple PGP/MIME encrypted messages crashes Thunderbird
Categories
(MailNews Core :: MIME, defect)
Tracking
(thunderbird16 fixed, thunderbird17 fixed)
RESOLVED
FIXED
Thunderbird 18.0
People
(Reporter: patrick, Assigned: patrick)
References
Details
Attachments
(1 file)
|
2.45 KB,
patch
|
standard8
:
review+
standard8
:
approval-comm-aurora+
standard8
:
approval-comm-beta+
|
Details | Diff | Splinter Review |
The implementation of nsPgpMimeProxy.cpp assumes that there is only 1 instance of nsIPgpMimeProxy (and its corresponding JS object). However, this assumption is wrong, as can be shown by selecting multiple PGP/MIME messages.
The result is that Thunderbird crashes on all platforms if the JS Object is registered. The attached patch changes the single instance (service) type of nsIPgpMimeProxy to an object that is created individually for each message.
| Assignee | ||
Updated•13 years ago
|
Attachment #666322 -
Flags: review?(mbanner)
Comment 1•13 years ago
|
||
Comment on attachment 666322 [details] [diff] [review]
Patch v1
If you need this on TB 16, please request approval-comm-aurora and approval-comm-beta later today as we're likely to build the final beta today.
Attachment #666322 -
Flags: review?(mbanner) → review+
Updated•13 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 2•13 years ago
|
||
Comment on attachment 666322 [details] [diff] [review]
Patch v1
[Approval Request Comment]
Regression caused by (bug #): 768928
User impact if declined: crashes Thunderbird if Enigmail installed
Testing completed (on c-c, etc.): comm-central, comm-aurora
Risk to taking this patch (and alternatives if risky): risk is low, changes are straight forward and have no side impact.
Attachment #666322 -
Flags: approval-comm-beta?
Attachment #666322 -
Flags: approval-comm-aurora?
Comment 3•13 years ago
|
||
Assignee: nobody → patrick
Status: NEW → RESOLVED
Closed: 13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 18.0
Updated•13 years ago
|
Attachment #666322 -
Flags: approval-comm-beta?
Attachment #666322 -
Flags: approval-comm-beta+
Attachment #666322 -
Flags: approval-comm-aurora?
Attachment #666322 -
Flags: approval-comm-aurora+
Comment 4•13 years ago
|
||
Updated•13 years ago
|
status-thunderbird16:
--- → fixed
status-thunderbird17:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•