Bug 795707 Selecting multiple PGP/MIME encrypted messages crashes Thunderbird. Create an individual object for each message instead of calling a service. r=Standard8